--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -1,11 +1,14 @@
 <view class='page_main'>
+<view class='page_main_content'>
    <view class='view_top'>
-     <image class="img_head" src='{{avatarUrlStr}}' mode='aspectFill'></image>
+   <open-data type="userAvatarUrl" class="img_head" mode='aspectFill' bindtap='onHeadTap'></open-data>
      <button class="btn_position" bindtap='onLocationTap'>搜索位置查找附近的充电器</button>
-     <image class='img_menu' src='/imgs/ic_menu.png' mode='aspectFill'></image>
+     <image class='img_menu' src='/imgs/ic_menu.png' mode='aspectFill' bindtap='onMenuTap'></image>
    </view>
 
-<map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="16" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location class="mapview"></map>
+<map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="16" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location class="mapview">
+</map>
 
+</view>
 
 </view>
