--- a/pages/main/main.wxss
+++ b/pages/main/main.wxss
@@ -1,6 +1,11 @@
 .page_main{
   width: 100%;
   height: 100%;
+  display: inline-block;
+}
+.page_main_content{
+  width: 100%;
+  height: 100%;
 }
 .view_top{
    width: 100%;
@@ -15,9 +20,12 @@
 .img_head{
   width: 80rpx;
   height: 80rpx;
-  border-radius: 80rpx;
+  border-radius: 50%;
   background-color: white;
   margin-left: 20rpx;
+  overflow:hidden;
+  display: block;
+  border: 2px solid #fff;
 }
 
 .btn_position{
