--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -26,12 +26,12 @@
 }
 
 .mine_text_nickname{
-   color: black;
+   color: white;
    font-size: 30rpx;
 }
 
 .mine_text_balance{
-   color: black;
+   color: white;
    margin-top: 20rpx;
    font-size: 30rpx;
 }
@@ -55,6 +55,7 @@
 .weui-grids {
     position: relative;
     overflow: hidden;
+    background-color: white
 }
  
  .weui-grids:before {
