--- a/pages/charge/charge.wxml
+++ b/pages/charge/charge.wxml
@@ -1,6 +1,6 @@
 <!--pages/charge/charge.wxml-->
-<view class="page_charge">
-  <image class='charge_join_image' src="/imgs/ic_join.png" mode='aspectFill'></image>
+<view class="container">
+  <image class='charge_join_image' src="/imgs/ic_banner.png" mode='aspectFill'></image>
   <text class='charge_rule_title'>计费规则</text>
   <radio-group class="radio-group" bindchange="onRadioChange">
   <label class="radio" wx:for="{{items}}">
