--- a/pages/charge/chargecode/chargecode.wxss
+++ b/pages/charge/chargecode/chargecode.wxss
@@ -1,18 +1,27 @@
 .chargecode_join_image{
+   width: 100%;
+  height: 400rpx;
+}
+
+.chargecode_body_view{
   width: 100%;
+  height: 686rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .chargecode_psw_title{
    color: black;
-   font-size: 40rpx;
-   margin-top: 100rpx;
+   font-size: 30rpx;
+   margin-top: 30rpx;
 }
 
 .chargecode_items{
-  width: 14%;
+  width: 15%;
   height: 100rpx;
   display: inline-block;
-  margin-left: 5%;
+  margin-left: 8%;
   border-color: #FF7F50;
   border-radius: 10%;
   border-style: dashed;
@@ -30,7 +39,7 @@
 }
 
 .chargecode_scrollview {
-   margin-top: 100rpx;
+   margin-top: 50rpx;
    height: 120rpx;
    width: 100%;
    white-space: nowrap;
@@ -42,3 +51,45 @@
   height: 0;
   color: transparent;
 }
+
+.chargecode_time_txt{
+  margin-top: 20rpx;
+}
+
+.chargecode_time_txt2{
+  margin-top: 20rpx;
+  font-size: 60rpx;
+  font-weight: bolder;
+  color: skyblue;
+}
+
+
+.charge_code_btnview{
+  margin-top: 30rpx;
+  width: 100%;
+  height: 100rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.chargecode_btn{
+  width: 40%;
+}
+
+
+.chargecode_tips_view{
+  width: 100%;
+  height: 120rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.chargecode_tips_txt{
+  color: grey;
+  font-size: 30rpx;
+  margin-left: 100rpx;
+  align-items: flex-start;
+}
+
