--- a/pages/charge/chargecode/chargecode.wxss
+++ b/pages/charge/chargecode/chargecode.wxss
@@ -70,11 +70,12 @@
   height: 100rpx;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  align-items: center;
 }
 
 .chargecode_btn{
-  width: 40%;
+  width: 36%;
+  line-height: 100rpx;
 }
 
 
