--- a/app.wxss
+++ b/app.wxss
@@ -12,3 +12,40 @@ page{
 } 
 
 
+.carditem{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cardview{
+   width: 90%;
+   height: auto;
+   border-style: solid;
+   border-width: 1px;
+   border-radius: 8px;
+   border-color: gainsboro;
+   margin-top: 20rpx;
+   margin-bottom: 20rpx;
+}
+
+.cardview .top{
+  height: 100rpx;
+  border-bottom: solid 1rpx gainsboro;
+  display: flex;
+  flex-direction: row; 
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+}
+
+.cardview .center{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20rpx;
+}
+
