--- a/pages/charge/charge.wxss
+++ b/pages/charge/charge.wxss
@@ -1,3 +1,12 @@
+.charge_page{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .charge_join_image{
   width: 100%;
   height: 400rpx;
@@ -83,7 +92,6 @@
   width: 400rpx;
   height: 100rpx;
   font-size: 30rpx;
-  margin-top: 50rpx;
   line-height: 100rpx;
 }
 
