--- a/pages/mine/help/help.wxml
+++ b/pages/mine/help/help.wxml
@@ -1,6 +1,6 @@
 <!--pages/mine/help/help.wxml-->
  <view wx:for="{{items}}" class='item_help' wx:for-index="idx">
-             <navigator url="../help/helpdetail/helpdetail?title=帮助中心">
+             <navigator url="../helpdetail/helpdetail?title=帮助中心">
     <view class='help_item_view'>
       <text class='help_item_title'>{{item.title}}</text>
        <image src='/imgs/ic_right_arrow.png' class='help_item_arrow'></image>
